cambio de links rrss

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
             <footer id="RRSS">
                 <h1>RRSS</h1>
                 <div class="socials">
-                    <a href="https://www.facebook.com/down/" target="_blank">
+                    <a href="https://www.facebook.com/marmozets/" target="_blank">
                         <img src="./assets/img/fb.png" alt="facebook" class="fb">
                     </a>
-                    <a href="https://www.instagram.com/down_nola/?hl=en" target="_blank">
+                    <a href="https://www.instagram.com/marmozets/?hl=en" target="_blank">
                         <img src="./assets/img/ig.png" alt="instagram" class="ig">
                     </a>
                 </div>
